[package]
name = "memmon"
version = "0.1.0"
authors = ["Andy Georges <itkovian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redhook = "~1.0"
libc = "~0.2"

[lib]
name = "memmon"
crate_type = ["dylib"]

